# npy-staticlibs

./: meson.build  meson_options.txt
numpy/: meson.build
numpy/core/: meson.build
numpy/random/: meson.build
