option('disable-threading', type: 'boolean', value: 'false',
        description: 'Disable threading support (see `NPY_ALLOW_THREADS` docs)')
# TODO: flip value to 'false' once we have `npy_cpu_dispatch_config.h` & co.
option('disable-simd-optimizations', type: 'boolean', value: 'true',
        description: 'Disable SIMD features beyond the baseline ones')
option('relaxed-strides-debug', type: 'boolean', value: 'false',
        description: 'Enable relaxed strides debug mode (see `NPY_RELAXED_STRIDES_DEBUG` docs)')
